# crunchr

./: .gitignore  LICENSE  README.md
analyze_yaml/: main.py
border_plot/: main.py
calc_burnt_area/: main.py
calc_energy/: main.py
calc_ms_prop/: main.py
calc_path/: main.py
calc_pdr/: main.py
calc_radio/: main.py
calc_surface/: main.py
chck_smrp/: main.py
check_node_path_pdr/: main.py
check_smrp/: main.py
coll_qos_vs_meas/: main.py
coll_qos_vs_mes/: main.py
failr/: main.py
gen_poisson_fail/: main.py
gen_sensor_reading_pickle/: main.py
if_plot/: main.py
meas_0_plot/: main.py
meas_3_comp_pdr/: main.py
meas_3_fail_pdr/: main.py
meas_4_plot_com/: main.py
meas_4_plot_ff/: main.py
meas_4_plot_ff_still/: main.py
meas_4_plot_reach/: main.py
meas_4_proc_ff/: main.py
model_vs_reach/: main.py
msr2mrp_meas_1_plot/: main.py
msr2mrp_meas_1_proc/: main.py
msr2mrp_reader/: main.py
path_loss/: main.py
path_loss_graph/: avg_pl.yaml  edmonds.py  loc_pdr.yaml  main.py
path_prop/: main.py
path_stat/: main.py
pdr_hop_stat/: main.py
pdr_stat/: main.py
pick_border/: main.py
plot_avg_depletion_time/: main.py
plot_avg_pkt_over_time/: main.py
plot_b_c_vs/: main.py
plot_blt/: main.py
plot_border/: main.py
plot_border_depletion/: main.py
plot_chebyshev_curve/: main.py
plot_depletion/: main.py
plot_efmrp/: main.py
plot_event_pdr/: main.py
plot_heatmap/: main.py
plot_init/: main.py
plot_init_vs_size/: main.py
plot_map/: main.py
r2mrp_analytic_model/: README.md  main.py  pyproject.toml  simulate.py
(+35 files in other folders)
